# sixfiveohtwo

./: CMakeLists.txt
include/: bus.h  opcodes.h  processor.h
src/: bus.cpp  main.cpp  processor.cpp
